v0.0.9

* [BGBUILD-131] Check if OS is supported before executing the plugin
* [BGBUILD-68] Global .boxgrinder/config or rc style file for config

v0.0.8

* [BGBUILD-122] Remove kernel recreation for Fedora EC2 images
* [BGBUILD-123] Remove RPM database recreation code

v0.0.7

* [BGBUILD-117] Remove Fedora 11 and 12 support
* [BGBUILD-110] For EC2 images don't use root account, use ec2-user instead

v0.0.6

* [BGBUILD-111] Don't install ec2-ami-tools by default in AMIs
* [BGBUILD-109] readdir64 bugfix for i386 base AMIs

v0.0.5

* [BGBUILD-81] post command execution w/ setarch breaks commands which are scripts
* [BGBUILD-57] Additional packages specified in EC2 plugin aren't installed
* [BGBUILD-67] Add Fedora 14 support for S3 delivery plugin: AMI type

v0.0.4

* [BGBUILD-49] Not able to log in to CentOS AMIs
* [BGBUILD-46] Allow building 32 bit images on 64 bit arch

v0.0.3

* [BGBUILD-43] ec2-ami-tools is not usable on EC2 appliances

v0.0.2

* [BGBUILD-39] EC2 plugin does not have "require 'tempfile'" but Temfile is used causing an error

v0.0.1

* First release